# oculie

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  start.sh
bot/: clob_client.py  config.py  consensus.py  database.py  main.py  market_scanner.py  noaa_fetcher.py  open_meteo_fetcher.py  reporter.py  resolver.py  trade_engine.py  visualcrossing_fetcher.py  wttr_fetcher.py  wunderground_fetcher.py
dashboard/backend/: app.py
dashboard/frontend/: package-lock.json  package.json
dashboard/frontend/src/: App.css  App.tsx  index.css  types.ts
dashboard/frontend/src/components/: ErrorBoundary.tsx  ErrorState.tsx
dashboard/frontend/src/hooks/: useApi.ts  useWebSocket.ts
dashboard/frontend/src/lib/: format.ts
dashboard/frontend/src/pages/: Alerts.tsx  Markets.tsx  Overview.tsx  Settings.tsx  TradeHistory.tsx
deploy/: Dockerfile.bot  Dockerfile.nginx  README.md  com.openclaw.bot.plist  com.openclaw.dashboard.plist  docker-compose.yml  install.sh  nginx.conf  status.sh  uninstall.sh  vps-setup.sh
docs/: ARCHITECTURE.md  VALIDATION_PHASE_A.md  VALIDATION_PHASE_B.md
scripts/: backtest_v2.py  diagnostic.py  live_5min.py  live_paper_10min.py  resolve_paper.py  root_cause_analysis.py  sensitivity_analysis.py  simulate_paper.py
tests/: conftest.py  test_api.py  test_bot.py  test_e2e_lifecycle.py
